--- a/package.json
+++ b/package.json
@@ -1,28 +1,16 @@
 {
   "name": "nostr-contacts",
-  "version": "0.0.1",
   "private": true,
-  "scripts": {
-    "dev": "vite dev",
-    "build": "vite build",
-    "preview": "vite preview",
-    "check": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json",
-    "check:watch": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json --watch",
-    "lint": "prettier --plugin-search-dir . --check . && eslint .",
-    "format": "prettier --plugin-search-dir . --write ."
-  },
+  "type": "module",
   "peerDependencies": {
     "typescript": ">=5.0.0"
   },
   "devDependencies": {
-    "@sveltejs/adapter-auto": "^2.1.0",
-    "@sveltejs/kit": "^1.20.4",
-    "@tailwindcss/forms": "^0.5.6",
-    "@tailwindcss/typography": "^0.5.9",
+    "@sveltejs/vite-plugin-svelte": "^3.0.2",
+    "@tsconfig/svelte": "^5.0.2",
+    "@typescript-eslint/eslint-plugin": "^7.0.1",
     "@types/debounce": "^1.2.1",
     "@types/markdown-it": "^13.0.1",
-    "@typescript-eslint/eslint-plugin": "^6.6.0",
-    "@typescript-eslint/parser": "^6.6.0",
     "autoprefixer": "^10.4.14",
     "eslint": "^8.48.0",
     "eslint-config-prettier": "^9.0.0",
@@ -33,13 +21,12 @@
     "prettier-plugin-svelte": "^3.0.3",
     "prettier-plugin-tailwindcss": "^0.5.7",
     "svelte": "^4.2.0",
-    "svelte-check": "^3.4.3",
+    "svelte-check": "^3.6.3",
     "svelte-eslint-parser": "^0.33.0",
     "tailwindcss": "^3.3.2",
     "tslib": "^2.4.1",
-    "vite": "^4.4.2"
+    "vite": "^5.1.0"
   },
-  "type": "module",
   "dependencies": {
     "dataloader": "^2.2.2",
     "debounce": "^1.2.1",
